Fix private repo style on mobile dashboard

--- a/github-dark.css
+++ b/github-dark.css
@@ -3863,6 +3863,9 @@
   .team-left-column {
     background: none !important;
   }
+  body.page-responsive .repo-list .private {
+    background-color: initial;
+  }
   .comment-form, #issues .labels, .listings .odd, .feed, #files .description,
   #message .envelope .header .info .title.unread, li.contextswitch ul li.current,
   .watcher-widget, ul.main_nav li.selected a, ul.states li, .add_file, .inset,
@@ -4956,7 +4959,8 @@
   }
   /* yellow text */
   /* .bg-pending might be a GitHub bug as it sets the fg */
-  .text-pending, .text-renamed, .bg-pending, .page-new-repo .octicon-lock {
+  .text-pending, .text-renamed, .bg-pending, .page-new-repo .octicon-lock,
+  body.page-responsive .repo-list .private .octicon-lock {
     color: #cb4 !important;
   }
   .archived-project-cards-pane .project-card .archived-header {
